--- a/build.xml
+++ b/build.xml
@@ -16,10 +16,18 @@
     <property name="hamcrest.jar" location="${junit.dir}/hamcrest-core-1.3.jar"/>
     <property name="test.class.name" value="com.company.tasks.implementation.TaskExecutorTest"/>
 
-    <target name="clean">
+    <target name="clean.build.data">
         <delete dir="${jar.dir}"/>
         <delete dir="${build.dir}"/>
+    </target>
+
+    <target name="clean.test.result">
         <delete dir="${report.dir}"/>
+    </target>
+
+    <target name="clean">
+        <antcall target="clean.build.data"/>
+        <antcall target="clean.test.result"/>
     </target>
 
     <target name="compile" depends="clean">
@@ -53,6 +61,7 @@
     <target name="deploy" depends="jar">
         <mkdir dir="${deploy.dir}"/>
         <copy file="${build.jar.name}" todir="${deploy.dir}"/>
+        <antcall target="clean.build.data"/>
     </target>
 
     <target name="main" depends="clean,deploy"/>
