--- a/build.xml
+++ b/build.xml
@@ -32,12 +32,12 @@
 
     <target name="compile" depends="clean">
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" source="1.8" target="1.8"/>
     </target>
 
     <target name="compile.test" depends="compile">
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${test.dir}" destdir="${classes.dir}" classpath="${junit.jar}"/>
+        <javac srcdir="${test.dir}" destdir="${classes.dir}" classpath="${junit.jar}" source="1.8" target="1.8"/>
     </target>
 
     <target name="test" depends="compile.test">
