--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,8 @@
     <property name="test.dir" value="test"/>
     <property name="report.dir" value="${test.dir}/report"/>
     <property name="report.filename" value="${report.dir}/test_results"/>
-    <property name="junit.dir" location="${ant.home}/.." />
+    <property name="lib.dir" value="lib"/>
+    <property name="junit.dir" location="${lib.dir}" />
     <property name="junit.jar" location="${junit.dir}/junit-4.12.jar"/>
     <property name="hamcrest.jar" location="${junit.dir}/hamcrest-core-1.3.jar"/>
     <property name="test.class.name" value="com.company.tasks.implementation.TaskExecutorTest"/>
@@ -26,18 +27,20 @@
     </target>
 
     <target name="clean">
+        <echoproperties destfile="prop"/>
         <antcall target="clean.build.data"/>
         <antcall target="clean.test.result"/>
     </target>
 
     <target name="compile" depends="clean">
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}" source="1.8" target="1.8"/>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" source="1.8" target="1.8" includeantruntime="false"/>
     </target>
 
     <target name="compile.test" depends="compile">
+        <echoproperties/>
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${test.dir}" destdir="${classes.dir}" classpath="${junit.jar}" source="1.8" target="1.8"/>
+        <javac srcdir="${test.dir}" destdir="${classes.dir}" classpath="${junit.jar}" source="1.8" target="1.8" includeantruntime="false"/>
     </target>
 
     <target name="test" depends="compile.test">
@@ -65,5 +68,5 @@
         <antcall target="clean.build.data"/>
     </target>
 
-    <target name="main" depends="clean,deploy"/>
+    <target name="main" depends="deploy"/>
 </project>
