--- a/build.xml
+++ b/build.xml
@@ -17,6 +17,11 @@
     <property name="hamcrest.jar" location="${junit.dir}/hamcrest-core-1.3.jar"/>
     <property name="test.class.name" value="com.company.tasks.implementation.TaskExecutorTest"/>
 
+    <path id="test.classpath">
+        <pathelement location="${junit.jar}"/>
+        <pathelement location="${hamcrest.jar}"/>
+    </path>
+
     <target name="clean.build.data">
         <delete dir="${jar.dir}"/>
         <delete dir="${build.dir}"/>
@@ -27,7 +32,6 @@
     </target>
 
     <target name="clean">
-        <echoproperties destfile="prop"/>
         <antcall target="clean.build.data"/>
         <antcall target="clean.test.result"/>
     </target>
@@ -38,9 +42,11 @@
     </target>
 
     <target name="compile.test" depends="compile">
-        <echoproperties/>
-        <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${test.dir}" destdir="${classes.dir}" classpath="${junit.jar}" source="1.8" target="1.8" includeantruntime="false"/>
+        <javac srcdir="${test.dir}" destdir="${classes.dir}" source="1.8" target="1.8" includeantruntime="false">
+            <classpath>
+                <path refid="test.classpath"/>
+            </classpath>
+        </javac>
     </target>
 
     <target name="test" depends="compile.test">
