--- a/build.xml
+++ b/build.xml
@@ -1,34 +1,37 @@
 <project name="JEE_Unit_2_Homework" basedir="." default="main">
 
-    <property name="src.dir" value="src"/>
-    <property name="build.dir" value="build"/>
-    <property name="deploy.dir" value="deploy"/>
-    <property name="classes.dir" value="${build.dir}/classes"/>
-    <property name="jar.dir" value="${build.dir}/jar"/>
-    <property name="jar.name" value="${ant.project.name}.jar"/>
-    <property name="build.jar.name" value="${jar.dir}/${jar.name}"/>
-    <property name="deploy.name" value="${deploy.dir}/${jar.name}"/>
-    <property name="test.dir" value="test"/>
-    <property name="report.dir" value="${test.dir}/report"/>
-    <property name="report.filename" value="${report.dir}/test_results"/>
-    <property name="lib.dir" value="lib"/>
-    <property name="junit.dir" location="${lib.dir}" />
+    <property name="lib" location="lib"/>
+    <property name="junit.dir" location="${lib}" />
     <property name="junit.jar" location="${junit.dir}/junit-4.12.jar"/>
     <property name="hamcrest.jar" location="${junit.dir}/hamcrest-core-1.3.jar"/>
+    <property name="src" location="src"/>
+    <property name="src.build" location="build"/>
+    <property name="classes" location="${src.build}/classes"/>
+    <property name="test.src" location="test"/>
+    <property name="test.build" location="test/build"/>
     <property name="test.class.name" value="com.company.tasks.implementation.TaskExecutorTest"/>
+    <property name="report" location="test/report"/>
+    <property name="report.filename" value="test_results"/>
+    <property name="jar.dir" value="${src.build}/jar"/>
+    <property name="jar.name" value="${ant.project.name}.jar"/>
+    <property name="build.jar.name" value="${jar.dir}/${jar.name}"/>
+    <property name="deploy" location="deploy"/>
+    <property name="deploy.name" value="${deploy}/${jar.name}"/>
 
     <path id="test.classpath">
         <pathelement location="${junit.jar}"/>
         <pathelement location="${hamcrest.jar}"/>
+        <pathelement location="${classes}"/>
     </path>
 
     <target name="clean.build.data">
         <delete dir="${jar.dir}"/>
-        <delete dir="${build.dir}"/>
+        <delete dir="${src.build}"/>
+        <delete dir="${test.build}"/>
     </target>
 
     <target name="clean.test.result">
-        <delete dir="${report.dir}"/>
+        <delete dir="${report}"/>
     </target>
 
     <target name="clean">
@@ -37,12 +40,13 @@
     </target>
 
     <target name="compile" depends="clean">
-        <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}" source="1.8" target="1.8" includeantruntime="false"/>
+        <mkdir dir="${classes}"/>
+        <javac srcdir="${src}" destdir="${classes}" source="1.8" target="1.8" includeantruntime="false"/>
     </target>
 
     <target name="compile.test" depends="compile">
-        <javac srcdir="${test.dir}" destdir="${classes.dir}" source="1.8" target="1.8" includeantruntime="false">
+        <mkdir dir="${test.build}"/>
+        <javac srcdir="${test.src}" destdir="${test.build}" source="1.8" target="1.8" includeantruntime="false">
             <classpath>
                 <path refid="test.classpath"/>
             </classpath>
@@ -50,27 +54,28 @@
     </target>
 
     <target name="test" depends="compile.test">
-        <mkdir dir="${report.dir}"/>
+        <mkdir dir="${report}"/>
         <junit printsummary="yes" haltonfailure="yes">
-            <classpath location="${junit.jar}"/>
-            <classpath location="${hamcrest.jar}"/>
-            <classpath location="${classes.dir}"/>
+            <classpath>
+                <path refid="test.classpath"/>
+                <pathelement location="${test.build}"/>
+            </classpath>
 
-            <test name="${test.class.name}" haltonfailure="yes" outfile="${report.filename}">
-                <formatter type="plain" />
+            <test name="${test.class.name}" haltonfailure="yes" todir="${report}" outfile="${report.filename}">
+                <formatter type="plain"/>
             </test>
         </junit>
     </target>
 
     <target name="jar" depends="test,compile">
         <mkdir dir="${jar.dir}"/>
-        <jar destfile="${build.jar.name}" basedir="${classes.dir}"/>
+        <jar destfile="${build.jar.name}" basedir="${classes}"/>
     </target>
 
     <target name="deploy" depends="jar">
-        <delete dir="${deploy.dir}"/>
-        <mkdir dir="${deploy.dir}"/>
-        <copy file="${build.jar.name}" todir="${deploy.dir}"/>
+        <delete dir="${deploy}"/>
+        <mkdir dir="${deploy}"/>
+        <copy file="${build.jar.name}" todir="${deploy}"/>
         <antcall target="clean.build.data"/>
     </target>
 
