--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,9 @@
 <project name="JEE_Unit_2_Homework" basedir="." default="main">
 
     <property name="lib" location="lib"/>
-    <property name="junit.dir" location="${lib}" />
-    <property name="junit.jar" location="${junit.dir}/junit-4.12.jar"/>
-    <property name="hamcrest.jar" location="${junit.dir}/hamcrest-core-1.3.jar"/>
+    <property name="junit" location="${lib}" />
+    <property name="junit.jar" location="${junit}/junit-4.12.jar"/>
+    <property name="hamcrest.jar" location="${junit}/hamcrest-core-1.3.jar"/>
     <property name="src" location="src"/>
     <property name="src.build" location="build"/>
     <property name="classes" location="${src.build}/classes"/>
@@ -12,11 +12,11 @@
     <property name="test.class.name" value="com.company.tasks.implementation.TaskExecutorTest"/>
     <property name="report" location="test/report"/>
     <property name="report.filename" value="test_results"/>
-    <property name="jar.dir" value="${src.build}/jar"/>
+    <property name="jar" location="${src.build}/jar"/>
     <property name="jar.name" value="${ant.project.name}.jar"/>
-    <property name="build.jar.name" value="${jar.dir}/${jar.name}"/>
+    <property name="build.name" location="${jar}/${jar.name}"/>
     <property name="deploy" location="deploy"/>
-    <property name="deploy.name" value="${deploy}/${jar.name}"/>
+    <property name="deploy.name" location="${deploy}/${jar.name}"/>
 
     <path id="test.classpath">
         <pathelement location="${junit.jar}"/>
@@ -25,7 +25,7 @@
     </path>
 
     <target name="clean.build.data">
-        <delete dir="${jar.dir}"/>
+        <delete dir="${jar}"/>
         <delete dir="${src.build}"/>
         <delete dir="${test.build}"/>
     </target>
@@ -68,14 +68,15 @@
     </target>
 
     <target name="jar" depends="test,compile">
-        <mkdir dir="${jar.dir}"/>
-        <jar destfile="${build.jar.name}" basedir="${classes}"/>
+        <delete dir="${jar}"/>
+        <mkdir dir="${jar}"/>
+        <jar destfile="${build.name}" basedir="${classes}"/>
     </target>
 
     <target name="deploy" depends="jar">
         <delete dir="${deploy}"/>
         <mkdir dir="${deploy}"/>
-        <copy file="${build.jar.name}" todir="${deploy}"/>
+        <copy file="${build.name}" todir="${deploy}"/>
         <antcall target="clean.build.data"/>
     </target>
 
