--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,9 @@
 
     <groupId>com.company</groupId>
     <artifactId>JEE_Unit_2_Homework</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
+    <name>JEE_Unit_2_Homework</name>
 
     <build>
         <plugins>
