JEE Unit 4 Homework

--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
     <property name="classes" location="${src.build}/classes"/>
     <property name="test.src" location="test"/>
     <property name="test.build" location="test/build"/>
-    <property name="test.class.name" value="com.company.tasks.implementation.MavenTaskExecutorTest"/>
+    <property name="test.class.name" value="com.company.tasks.implementation.TaskExecutorTest"/>
     <property name="report" location="test/report"/>
     <property name="report.filename" value="test_results"/>
     <property name="jar" location="${src.build}/jar"/>
@@ -17,6 +17,7 @@
     <property name="build.name" location="${jar}/${jar.name}"/>
     <property name="deploy" location="deploy"/>
     <property name="deploy.name" location="${deploy}/${jar.name}"/>
+    <property name="maven.test.dir" location="${src}/test/java/com/company/tasks/implementation/MavenTaskExecutorTest.java"/>
 
     <path id="test.classpath">
         <pathelement location="${junit.jar}"/>
@@ -40,15 +41,14 @@
     </target>
 
     <target name="compile" depends="clean">
-        <echoproperties destfile="my_properties"/>
         <mkdir dir="${classes}"/>
         <javac srcdir="${src}"
                destdir="${classes}"
                source="1.8"
                target="1.8"
                includeantruntime="false"
-               excludes="Maven*.*"
-        />
+               >
+        </javac>
     </target>
 
     <target name="compile.test" depends="compile">
