--- a/build.xml
+++ b/build.xml
@@ -11,13 +11,13 @@
     <property name="test.src" location="${test}/java"/>
     <property name="test.build" location="${test}/build"/>
     <property name="test.class.name" value="com.company.tasks.implementation.TaskExecutorTest"/>
-    <property name="report" location="${test}/report"/>
-    <property name="report.filename" value="test_results"/>
     <property name="jar" location="${src.build}/jar"/>
     <property name="jar.name" value="${ant.project.name}.jar"/>
     <property name="build.name" location="${jar}/${jar.name}"/>
     <property name="deploy" location="deploy"/>
     <property name="deploy.name" location="${deploy}/${jar.name}"/>
+    <property name="report" location="${deploy}/report"/>
+    <property name="report.filename" value="test_results"/>
 
     <path id="test.classpath">
         <pathelement location="${junit.jar}"/>
